More java8 cleanup flagged by intellij